// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component isMain is false 1`] = `
<DocumentFragment>
  <button
    class="button  "
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button Component isMain is true 1`] = `
<DocumentFragment>
  <button
    class="button main "
  >
    Click Me
  </button>
</DocumentFragment>
`;
